# chandler

./: .dockerignore  .gitignore  .rubberstamp  CONFIGURATION.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  README.md  alpine.Dockerfile  debian.Dockerfile  docker-bake.hcl  install-chandler  install.mk  makefile  tinyrick.rs  uninstall-chandler  upload
.github/workflows/: test-futureproof-os.yml  test.yml
example/: chandler.toml
example/etc/: profile
example/etc/init.d/: sshd
example/hello-1.0.0/: README
src/: lib.rs
