[package]
name = "chandler"
description = "tar normalizer"
version = "0.0.5"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/chandler"
documentation = "https://docs.rs/chandler/latest/chandler/"

[dependencies]
die = "0.2.0"
fancy-regex = "0.16.2"
flate2 = "1.1.5"
getopts = "0.2.24"
normalize-path = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
tinyrick = { version = "0.0.17", optional = true }
tinyrick_extras = { version = "0.0.11", optional = true }
toml = "0.9.8"
walkdir = "2.5.0"

[features]
letmeout = ["tinyrick", "tinyrick_extras"]

[lib]
name = "chandler"

[[bin]]
name = "chandler"
path = "src/bin/chandler.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
