[package]
name = "chandler"
description = "tar normalizer"
version = "0.0.8"
edition = "2024"
authors = ["Andrew Pennebaker <n4jm4@pm.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/mcandre/chandler"
documentation = "https://docs.rs/chandler/latest/chandler/"

[dependencies]
die = "0.2.0"
fancy-regex = "0.17.0"
flate2 = "1.1.5"
getopts = "0.2.24"
normalize-path = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
toml = "0.9.8"
walkdir = "2.5.0"

[lib]
name = "chandler"

[[bin]]
name = "chandler"
path = "src/bin/chandler.rs"
